# FCAI-OPP-Assignment-1-Image-Processing

./: .gitignore  CLION_SETUP.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Doxyfile  ImageStudio.pro  Makefile  Makefile.Debug  Makefile.Release  PhotoSmith.pro  README.md  app.res  build_release.bat  configure_build.bat  filters.hpp  main.cpp  resources.qrc  setup_clion.bat  simple_app.pro  tempCodeRunnerFile.cpp
build_portable/: Makefile.Debug  Makefile.Release
build_portable/ImageStudio_Portable/: ImageStudio.bat  README.txt
build_portable/PhotoSmith_Portable/: README.txt
build_release/: Makefile.Debug  Makefile.Release
docs/: DEVELOPER_GUIDE.md  INSTALLATION.md  PhotoSmith_Report.md  PhotoSmith_Report.txt  README.md  USER_GUIDE.md
scripts/: build_all.bat  build_dev_package.ps1  build_portable.bat  build_release.bat  test_app.bat
src/: simple_qt_app.cpp
src/core/: ImageFilters.cpp  ImageFilters.h  Image_Class.cpp  Image_Class.h
src/core/filters/: ImageFilters.cpp  ImageFilters.h
src/core/history/: HistoryManager.h
src/core/image/: Image_Class.cpp  Image_Class.h
src/core/io/: ImageIO.h
src/gui/: image_studio.cpp  mainwindow.ui  photo_smith.cpp
